add comments for giving up the competition

--- a/project-nizhou-yitxia.html
+++ b/project-nizhou-yitxia.html
@@ -48,7 +48,12 @@
         As shown in the motivational image, the basic idea of our proposal is to place animals (eg. rabbits) as well as some common objects on earth to the moon's surface. 
         The central theme for the image will ideally be a scene for rabbit civilization on the moon with Earth and the universe as the background, which is subtly the opposite of reality.
         The "out of place" results from that the moon does not have the conditions for the rabbits' survival and civilization development.         
-    </p><br/> <br/>
+    </p>
+    
+    <h3>Comments</h3>
+    <p>Due to the lack of time, we are not able to attend the render competition. Therefore, the following validation will not include the effects of the rendered theme image.</p>
+
+    <br/> <br/>
 
 	<!-- ================================================================= -->
 
